# industrial-ethernet

./: .gitignore  .gitmodules  AGENTS.md  Devicetree_memory.md  Eth_industriel_plan.md  README.md  README_devicetree_memory.md  plan_zephyr.md  west.yml
app/: CMakeLists.txt  diagnostics.conf  lcd.conf  prj.conf
app/boards/: stm32h747i_disco_stm32h747xx_m7.overlay
app/src/: app_modbus_tcp.c  app_modbus_tcp.h  main.c  modbus_map.h  net_cfg.c  net_cfg.h
app/src/core/: main.c
app/src/net/: net_cfg.c
app/src/protocols/eip/: CMakeLists.txt  app_eip.c  app_eip.h  devicedata.h  opener_user_conf.h  opener_zephyr_port.c  platform_network_includes.h
app/src/protocols/eip/netinet/: in.h
app/src/protocols/eip/sys/: socket.h
app/src/protocols/modbus/: app_modbus_scanner.c  app_modbus_scanner.h  app_modbus_tcp.c  app_modbus_tcp.h  modbus_map.h
app/src/shell/: util_cmds.c
app/src/ui/: app_lcd.c  app_lcd.h
app/src/web/: app_web.c  app_web.h  app_web_assets.h  app_web_logo.h
patches/: zephyr-cmake-backslash.patch
tools/: dhcp_stm32.py  eip_probe.py
